# mocks

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  test_agent.py
app/: __init__.py  config.py  main.py
app/agents/: finance_agent.py  openai_runner.py  prompts.py
app/api/: routes.py  schemas.py
app/models/: finance.py
app/services/: __init__.py  context_store.py
app/tools/: __init__.py  finance.py
data/: accounting_policies.json  audit_evidence.json  contracts.json  historical_decisions.json  ledger_entries.json
evals/: __init__.py  run_evals.py  scorers.py
evals/cases/: transaction_review.jsonl
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
tests/: test_api.py  test_evals.py  test_finance_agent_service.py  test_finance_tools.py
