[project]
name = "finance-agent-service"
version = "0.1.0"
description = "A production-style FastAPI foundation for audit-ready finance agents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai-agents>=0.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
